[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "locust"
license = { text = "MIT" }
description = "Developer-friendly load testing framework"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "gevent >=22.10.2",
    "flask >=2.0.0",
    "Werkzeug >=2.0.0",
    "requests >=2.26.0",
    "requests >=2.32.2; python_version>'3.11'", # See #2555
    "msgpack >=1.0.0",
    "pyzmq >=25.0.0",
    "geventhttpclient >=2.3.1",
    "ConfigArgParse >=1.5.5",
    "tomli >=1.1.0; python_version<'3.11'",
    "psutil >=5.9.1",
    "Flask-Login >=0.6.3",
    "Flask-Cors >=3.0.10",
    "pywin32; platform_system=='Windows'",
]
classifiers = [
    "Topic :: Software Development :: Testing :: Traffic Generation",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Traffic Generation",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/locustio/locust"
Documentation = "https://docs.locust.io/"
Code = "https://github.com/locustio/locust"
"Help/Questions" = "https://stackoverflow.com/questions/tagged/locust"
"Issue tracker" = "https://github.com/locustio/locust/issues"


[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE"]
include-package-data = false

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = [
    "build",
    "examples/issue_*.py",
    "src/readthedocs-sphinx-search/",
]
lint.ignore = ["E402", "E501", "E713", "E731", "E741", "F401"]
lint.select = ["E", "F", "W", "UP", "FA102", "I001"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["F841"]

[tool.ruff.lint.isort]
section-order = ["future", "locust", "standard-library", "third-party", "first-party", "local-folder"]
# Custom selection-order: to ensure locust is imported as first in lucustfiles (for successful gevent monkey patching)

[tool.ruff.lint.isort.sections]
locust = ["locust"]


[tool.setuptools_scm]
write_to = "locust/_version.py"
local_scheme = "no-local-version"

[options.packages.find]
namespace = true
include = ["locust*"]
exclude = ["examples", "tests"]

[tool.setuptools.package-data]
locust = ["py.typed"]
"locust.webui.dist" = ["**/*"]

[project.scripts]
locust = "locust.main:main"

[tool.mypy]
# missing type stubs
ignore_missing_imports = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = ["locust.dispatch"]
no_strict_optional = true

[tool.pyright]
exclude = [
    "locust/test",
]
reportOptionalMemberAccess = "none"
analyzeUnannotatedFunctions = false
