[metadata]
name = locust
license_file = LICENSE
url = https://locust.io/
project_urls = 
    Documentation = https://docs.locust.io/
    Code = https://github.com/locustio/locust
    Help/Questions = https://stackoverflow.com/questions/tagged/locust
    Issue tracker = https://github.com/locustio/locust/issues
description = Developer friendly load testing framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
obsoletes-dist = locustio
classifiers =
    Topic :: Software Development :: Testing :: Traffic Generation
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Traffic Generation
    Topic :: System :: Distributed Computing

[options]
packages = find:
include_package_data = true
zip_safe = false
python_requires = >= 3.6

[options.packages.find]
exclude =
    examples
    tests

[options.entry_points]
console_scripts =
    locust = locust.main:main
